--- a/style.css
+++ b/style.css
@@ -1,11 +1,12 @@
-:root{
---text: #A66D45;
---background: #F5F2EE;
---primary: #F3EAD6;
---secondary: #F6B6A7;
---accent: #FD9584;
+:root {
+    --text: #A66D45;
+    --background: #F5F2EE;
+    --primary: #F3EAD6;
+    --secondary: #F6B6A7;
+    --accent: #FD9584;
 
 }
+
 /* <uniquifier>: Use a unique and descriptive class name
 <weight>: Use a value from 300 to 700
 
@@ -21,80 +22,110 @@
   font-style: normal;
 }
   */
-*{
+* {
     font-family: "Quicksand", sans-serif;
     font-optical-sizing: auto;
 }
-a{
+
+a {
     text-decoration: none;
 }
-body{
+
+body {
     max-width: 1440px;
     margin: 0 auto;
     background-color: var(--background);
-
+    border: 2px solid red;
 }
-h1{
+
+h1 {
+    color: var(--accent);
     font-family: "Shadows Into Light", cursive;
     font-size: 3rem;
     font-weight: 700;
     font-style: bold;
     margin: 0;
 }
+
 /*Navigation*/
-.navBar{
+.navBar {
     display: flex;
     align-items: center;
     justify-content: center;
     justify-content: space-between;
     padding: 0 15% 0 10%;
     box-sizing: border-box;
-   
+
 }
-.navBar_link{
-    display: flex ;
+
+.navBar_link {
+    display: flex;
     font-size: 1rem;
     gap: 1rem;
     padding: 1rem;
     font-weight: 700;
     font-style: bold;
 }
-.navBar a{
+
+.navBar a {
     color: var(--text);
-    
+
 }
-.navBar a:hover{
+
+.navBar a:hover {
     text-decoration: none;
     color: var(--accent);
     transition: 0.5s;
-    
+
 }
+/*footer*/
+
+.footer{
+    width: 100%;
+    background-color: var(--secondary);
+}
+.footer_container{
+    margin: 5% 0 0;
+    padding: 0 15%;
+    display: flex;
+    align-items: center;
+justify-content: space-between;
+}
+
+.footer_container h3{
+    font-size: 2em;
+   color: white;
+}
+
 /*bannière*/
-.bannerContainer img{
+.bannerContainer img {
     width: 100px;
     border-radius: 50px;
     border: 5px solid var(--primary);
     position: absolute;
     left: 20%;
 }
-#bannerTitle{
+
+#bannerTitle {
     position: absolute;
-    color: var(--accent);
+    color: var(--secondary);
     font-family: "Shadows Into Light", cursive;
     font-size: 4em;
     left: 27%;
     top: 3%;
-    
+
 }
-.banner{
- width: 100%;
+
+.banner {
+    width: 100%;
 }
-.bannerContainer{
+
+.bannerContainer {
     display: flex;
     padding: 2%;
 }
 
-.bannerContent{
+.bannerContent {
     background-color: var(--primary);
     color: var(--text);
     padding: 15px;
@@ -102,11 +133,11 @@ h1{
     margin-left: 150px;
     padding-left: 100px;
     width: 50%;
-    border-radius: 30px ;
+    border-radius: 30px;
 }
 
 /**/
-.sendMe{
+.sendMe {
     display: flex;
     align-items: center;
     justify-content: end;
@@ -114,7 +145,8 @@ h1{
     margin-right: 20%;
 
 }
-.rond{
+
+.rond {
     margin: 0 20px;
     width: 30px;
     height: 30px;
@@ -125,12 +157,14 @@ h1{
     animation-iteration-count: infinite;
 }
 
-.opacityRond{
+.opacityRond {
     opacity: 0.3;
 }
-.opacityRond1{
+
+.opacityRond1 {
     opacity: 0.6;
 }
+
 /*
 @keyframes colorRond {
    from {
@@ -146,7 +180,7 @@ h1{
 
 */
 
-.sendMe_btn{
+.sendMe_btn {
     margin-left: 10px;
     background-color: var(--accent);
     color: var(--primary);
@@ -157,8 +191,240 @@ h1{
     border-radius: 10px;
     cursor: pointer;
 }
-.sendMe_btn:hover{
+
+.sendMe_btn:hover {
     background-color: var(--primary);
     color: var(--accent);
     transition: 0.6s;
+}
+
+/**/
+
+.aboutMe {
+    position: absolute;
+    top: 30%;
+    width: 40%;
+    margin-top: 5%;
+    margin-left: 10%;
+
+}
+
+.aboutMe_card {
+    border-radius: 30px;
+    background-color: var(--background);
+    border: 5px solid var(--primary);
+}
+
+.aboutMe-title {
+    background-color: var(--primary);
+    color: var(--text);
+    border-radius: 20px 20px 0 0;
+    padding: 0 20px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    font-weight: bold;
+}
+
+.aboutMe-title h2 {
+    margin: 0;
+}
+
+.aboutMe-title p {
+    font-size: large;
+    cursor: not-allowed;
+}
+
+.aboutMe_content {
+    background-color: var(--background);
+}
+
+.aboutMe_content p {
+    margin: 1em;
+    color: var(--text);
+}
+
+/*deco*/
+.deco {
+    position: relative;
+    top: 10px;
+    width: 35%;
+    height: 150px;
+    background-color: var(--secondary);
+    border-radius: 30px;
+    padding: 20px 30px;
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+    margin-top: 5%;
+    margin-left: 40%;
+}
+
+/**/
+.cardImg {
+    width: 100%;
+    margin: 50px 0;
+    box-sizing: border-box;
+}
+
+.cardImg_container {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    justify-content: space-between;
+    padding: 0 12%;
+}
+
+.cardImg_content {
+    width: 30%;
+    height: 400px;
+    background-size: cover;
+    background-position: center;
+    border-radius: 30px;
+
+}
+
+.img1 {
+    background-image: url(/img/cat.png);
+}
+
+.img1:hover {
+    background-image: url(/img/flowers.png);
+    transition: 0.8s;
+    transform: scale(1.1);
+}
+
+
+.img2 {
+    background-image: url(/img/flowers.png);
+}
+
+.img2:hover {
+    background-image: url(/img/cat.png);
+    transition: 0.8s;
+    transform: scale(1.1);
+}
+
+.img3 {
+    background-image: url(/img/cat.png);
+}
+
+.img3:hover {
+    background-image: url(/img/flowers.png);
+    transition: 0.8s;
+    transform: scale(1.1);
+}
+
+.cardImgDeco {
+    width: 10px;
+    height: 40px;
+    border-radius: 30px;
+    background-color: white;
+}
+
+.cardImg_title {
+    color: white;
+    font-weight: 400;
+    font-size: 1.5em;
+    font-style: normal;
+    display: flex;
+    align-items: center;
+    gap: 10px;
+    padding: 30px;
+}
+
+/**/
+.cardLink {
+    width: 100%;
+    display: flex;
+    position: absolute;
+    top: 130%;
+    left: 50%;
+}
+
+
+/**/
+.cardText {
+    padding: 50px;
+    margin: 15% 10% 5%;
+    background-color: var(--primary);
+    border-radius: 30px;
+    box-sizing: border-box;
+}
+
+
+.cardText_content {
+    width: 50%;
+
+}
+.cardText_content h2{
+    color: var(--secondary);
+}
+.cardText_content p{
+    color: var(--text);
+}
+/**/
+
+.cardLink_container img {
+    width: 100%;
+    height: 200px;
+    object-fit: cover;
+    opacity: 0.8;
+    border-radius: 30px;
+}
+
+.cardLink_content {
+    padding: 30px;
+    margin: 0 50px;
+    background-color: white;
+    border-radius: 30px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+.cardLink_title {
+    display: flex;
+    align-items: center;
+    gap: 10px;
+}
+
+.cardLink_title h2 {
+    margin: 0;
+    color: var(--secondary);
+    font-size: 2rem;
+}
+
+.cardLink_title p {
+    margin: 0;
+    color: var(--accent);
+    font-family: "Shadows Into Light", cursive;
+    font-size: 3rem;
+}
+
+/*Tag langage*/
+.langage_tag{
+  width: 100%;
+  margin: 30px;
+}
+.langage_tag h2{
+    color: var(--accent);
+    font-size: 4em;
+    margin-left: 10%;
+}
+.langage_tag_container{
+    margin: 0 5%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 2em;
+}
+
+.tag{
+    background-color: var(--secondary);
+    color: white;
+    border-radius: 30px;
+    padding: 5px 30px;
+    text-align: center;
 }
